Fix anchor-linked content being hidden behind sticky issue header and project jump in responsive UI (#42684, #42774).
Patch by Mizuki ISHIKAWA (user:ishikawa999).


git-svn-id: https://svn.redmine.org/redmine/trunk@23808 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -854,6 +854,13 @@
   div#sticky-issue-header {
     top: 64px;
   }
+
+  /* Prevent content from being hidden behind #sticky-issue-header and project-jump when scrolling via anchor links. */
+  .controller-issues.action-show div.wiki a[name],
+  .controller-issues.action-show #history div[id^="note-"],
+  .controller-issues.action-show #history div[id^="change-"] {
+    scroll-margin-top: 114px;
+  }
 }
 
 @media all and (max-width: 599px) {
